fix autocomplete z-index

--- a/static/email_builder/_css/autocomplete.css
+++ b/static/email_builder/_css/autocomplete.css
@@ -1,3 +1,4 @@
 .ui-autocomplete {
     font-size: 1em;
+    z-index: 111;
 }
